Use new platform APIs for sending text messages
This change replaces the existing platform APIs to send text messages
with the new APIs which allows message sending over default messaging
app specific transport.

Bug: 470514359
Bug: 480317524
Flag: com.android.bluetooth.flags.message_upgrade
Test: m Bluetooth
Change-Id: I7fb09c301f01f2922c263eb82ad5ab8395cd18f1